<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/calculator"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textSize="24sp" />
</LinearLayout>

